* Past & future matches for a team
* Remove unnecessary packages